--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -14,39 +14,33 @@
     </style>
 </head>
 <body>
+
 <h1>Add an Entry</h1>
 <form action="{% url 'home' %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Submit">
 </form>
-
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
-
-{#<script>#}
-{#    $(document).ready(function () {#}
-{#        $('#id_language').select2({#}
-{#            ajax: {#}
-{#                url: '{% url 'home' %}',#}
-{#                dataType: 'json',#}
-{#                processResults: function (data) {#}
-{#                    return {#}
-{#                        results: $.map(data, function (item) {#}
-{#                            return {id: item.id, text: item.title};#}
-{#                        })#}
-{#                    };#}
-{#                }#}
-{#            },#}
-{#            minimumInputLength: 1#}
-{#        });#}
-{#    });#}
-{#</script>#}
 <script>
     $(document).ready(function () {
-        $('#id_language').select2();
-    })
+        $('#id_language').select2({
+            ajax: {
+                url: '{% url 'home' %}',
+                dataType: 'json',
+                processResults: function (data) {
+                    return {
+                        results: $.map(data, function (item) {
+                            return {id: item.id, text: item.title};
+                        })
+                    };
+                }
+            },
+            minimumInputLength: 1
+        });
+    });
 </script>
 </body>
 </html>
